--- a/assets/style.css
+++ b/assets/style.css
@@ -1,16 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
+:root {
+    --background: #1C201D;
+    --primary: #44FF8B;
+}
+
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Poppins', sans-serif;
     text-decoration: none;
     list-style-type: none;
 }
 
 header {
-    background: #000814;
+    background: linear-gradient(to bottom, var(--primary), var(--background));
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -22,7 +28,7 @@ header {
 }
 
 .logo {
-    height: 70%;
+    height: 250%;
 }
 
 .navbar,
@@ -40,7 +46,90 @@ header {
     gap: 30px;
 }
 
-.navbar-list a{
+.navbar-list a {
+    color: black;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+main {
+    background: var(--background);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
     color: white;
+}
+
+#hero {
+    margin-top: 65px;
+    padding: 70px 0;
+    max-width: 1200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-info {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 50%;
+}
+
+.hero-info h1 {
+    font-size: 40px;
+    width: 80%;
+    min-width: 500px;
+    font-weight: 800;
+    background: linear-gradient(to top, #1d976c, #93f9b9);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+
+.hero-info p {
     font-size: 14px;
+    width: 70%;
+    color: azure;
+}
+
+.botones {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    padding: 10px;
+    gap: 20px;
+}
+
+.botones a{
+    color: white;
+    background-color: var(--primary);
+    width: 120px;
+    padding: 10px 10px;
+    border-radius: 20px;
+    font-size: 14px;
+    text-align: center;
+}
+
+.hero-card {
+    width: 350px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#mas-info {
+    padding: 0 0 150px;
+    max-width: 1200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.masinfo {
+    display: flex;
+    width: 70%;
 }
