--- a/assets/mediaqueries.css
+++ b/assets/mediaqueries.css
@@ -1,4 +1,45 @@
 @media (max-width:992px){
+
+    .navbar {
+        gap: 10px;
+    }
+
+    .navbar-list {
+        position: absolute;
+        top: 65px;
+        left: 5%;
+        right: 5%;
+        width: 90%;
+        flex-direction: column;
+        background: var(--background);
+        border: 2px solid white;
+        border-top: 0px;
+        border-radius: 0px 0px 15px 15px;
+        align-items: flex-start;
+        padding: 45px 30px;
+        gap: 25px;
+        z-index: 2;
+        display: none;
+    }
+
+    .navbar-list a{
+        font-size: 18px;
+    }
+
+    .menu-label {
+        display: flex;
+        cursor: pointer;
+    }
+
+    .menu-label img {
+        height: 20px;
+        width: 25px;
+    }
+
+    #menu-toggle:checked + .navbar-list {
+        display: flex;
+    }
+
     .hero-info{
         width: 100%;
         text-align: center;
