--- a/assets/mediaqueries.css
+++ b/assets/mediaqueries.css
@@ -1,7 +1,35 @@
 @media (max-width:992px){
+    .hero-info{
+        width: 100%;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+    }
 
+    .hero-info h1 {
+        width: 90%;
+        max-width: 500px;
+        min-width: unset;
+    }
+
+    .hero-info p {
+        width: 60%;
+        max-width: 80%;
+    }
+
+    .hero-card {
+        display: none;
+    }
+} 
+
+@media (max-width:576px){
     .navbar {
         gap: 10px;
+    }
+
+    .navbar i{
+        display: block;
     }
 
     .navbar-list {
@@ -40,27 +68,4 @@
     #menu-toggle:checked + .navbar-list {
         display: flex;
     }
-
-    .hero-info{
-        width: 100%;
-        text-align: center;
-        justify-content: center;
-        align-items: center;
-        gap: 30px;
-    }
-
-    .hero-info h1 {
-        width: 90%;
-        max-width: 500px;
-        min-width: unset;
-    }
-
-    .hero-info p {
-        width: 60%;
-        max-width: 600px;
-    }
-
-    .hero-card {
-        display: none;
-    }
-} 
+}
