--- a/assets/style.css
+++ b/assets/style.css
@@ -137,11 +137,71 @@ main {
 }
 
 #mas-info {
-    padding: 0 0 150px;
     width: 80%;
     max-width: 850px;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+
+/* Info cards */
+
+#info {
+    padding: 70px 0;
+    max-width: 1200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 40px;
+}
+
+#info h2{
+    font-size: 32px;
+    font-weight: 800;
+    text-align: center;
+}
+
+#info h3 {
+    font-size: 16px;
+    font-weight: 400;
+    max-width: 800px;
+    text-align: center;
+}
+
+.info-cards-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.info-card {
+    width: 310px;
+    height: 290px;
+    padding: 40px 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-color: rgb(80, 80, 80);
+    border-radius: 10px;
+    gap: 20px;
+}
+
+.info-card img {
+    width: 100px;
+}
+
+.info-card h3 {
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.info-card p {
+    font-size: 14px;
+    font-weight: 300;
+    color: azure;
 }
