--- a/assets/style.css
+++ b/assets/style.css
@@ -205,3 +205,62 @@ main {
     font-weight: 300;
     color: azure;
 }
+
+#contact {
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    gap: 50px;
+    flex-wrap: wrap;
+}
+
+#contact iframe {
+    border-radius: 15px;
+}
+
+
+.info-contact h4 {
+    font-size: 35px;
+}
+
+.gps {
+    display: flex;
+    gap: 10px;
+    padding: 10px;
+}
+
+.gps img {
+    width: 30px;
+}
+
+.mail {
+    display: flex;
+    gap: 10px;
+    padding: 10px;
+}
+
+.mail img {
+    width: 30px;
+}
+
+.tel {
+    display: flex;
+    gap: 10px;
+    padding: 10px;
+}
+
+.tel img {
+    width: 30px;
+}
+
+.iconos-contact {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    padding: 10px;
+    gap: 20px;
+}
+
+.iconos-contact img {
+    width: 34px;
+}
